--- a/src/index.css
+++ b/src/index.css
@@ -35,6 +35,9 @@ header {
 
 .details {
   display: grid;
+  padding: 1em;
+  gap: 1em;
+  grid-template-columns: 1fr;
 }
 
 .details__options {
@@ -51,8 +54,32 @@ button {
   display: inline-block;  
   cursor: pointer;
   color: inherit;
+  padding: .5em;  
+}
+
+th,
+td {
+  padding: .1em;
 }
 
 th {
-  text-align: start;
+  text-align: start;  
+}
+
+.autoComplete {
+  padding: .5em;
+  border: 1px solid;
+}
+
+.details__actions {
+  display: flex;
+  flex-direction: column;
+  gap: .5em;
+}
+
+/* lg */
+@media (min-width: 1024px) {
+  .details {    
+    grid-template-columns: 1fr 1fr 1fr;
+  }
 }
