--- a/src/index.css
+++ b/src/index.css
@@ -127,7 +127,13 @@ article {
 }
 
 .votingSummary {
-  margin-top: 1em;;
+  margin-top: 1em;
+}
+
+.button-link {
+  border: none;
+  text-decoration: underline;
+  text-align: start;
 }
 
 /* lg */
