--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -5,29 +5,40 @@
   --clr-dark: #070a13;
   --clr-light: #f1f5f9;
 
+  --clr-dark-other: #262a32;
+  --clr-light-other: #d5e3f0;
+
   --clr-success: rgb(34 197 94);
   --clr-info: rgb(59 130 246);
   --clr-wan: rgb(249 115 22);
   --clr-error: rgb(239 68 68 );
+
+  --height-search: 64px;
+  --height-nav: 54px;
 }
 
 .light-mode {
   --clr-light: #070a13;
   --clr-dark: #f1f5f9;
+  --clr-light-other: #262a32;
+  --clr-dark-other: #d5e3f0;
   --clr-slate400: #1e293b;
   --clr-slate600: #1e293b;
   --clr-slate800: #1e293b;
 }
 
-body {  
-  min-height: 100vh;  
+body {    
   background: var(--clr-light);
-  color: var(--clr-dark);
-  border: 1px solid;  
+  color: var(--clr-dark);  
 }
 
 * { 
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+
+.container {  
+  height: calc(100vh - var(--height-nav));
+  overflow-y: scroll;
 }
