--- a/src/styles/division.css
+++ b/src/styles/division.css
@@ -1,8 +1,16 @@
-.divisionDetails {
-    height: calc(100vh - 300px);
+.divisionDetails {    
+    height: 100%;    
 }
 
-divisionDetails__title {
-    flex: 1;    
-    padding: 1em;            
+.divisionDetails__title {
+    padding: .5em;
+    height: 4.5em;    
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.divisionDetails__title-wrapper {    
+    display: flex;
+    gap: 1em;
 }
