--- a/src/styles/search.css
+++ b/src/styles/search.css
@@ -1,103 +1,108 @@
-.details {
-    display: grid;
-    padding: 1em;
-    gap: 1em;
-    grid-template-columns: 1fr;
-  }
-  
-  .details__options {
-    display: flex;
-    gap: 1em;
-    padding: .5em;
-  }
-  
-  .mpImage {
-    width:100%;
-  }
-  
-  .logoImage{
-    width: 50px;
-    height: 50px;
-  }
-  
-  button {
-    display: inline-block;  
-    cursor: pointer;
-    color: inherit;
-    padding: .5em;  
-    color: var(--clr-dark);  
-    background-color: var(--clr-light);  
-  }
-  
-  th,
-  td {
-    padding: .1em;
-  }
-  
-  th {
-    text-align: start;  
-  }
-  
-  .autoComplete {
-    padding: 4px;
-    /* padding-top: 8px; */
-    background-color: var(--clr-light-other);     
-    border-radius: 4px;;
-  }
-  
-  .details__actions {
-    display: flex;
-    flex-direction: column;
-    gap: .5em;
-  }
-    
-  article {
-    padding: 2em;  
-  }
-  
-  .table__similarity td, th {
-    padding-left: .5em;
-    padding-right: .5em;
-  }
-  
-  .votingHistoryProgress {
-    width: 100%;
-    padding: 1em;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .votingHistoryWrapper {
-    padding: 1em;
-  }
-  
-  .votingHistoryWrapper__summarise {
-    margin-bottom: .3em;
-    padding-left: 1em;
-    display: flex;
-    align-items: center;
-    gap: .5em;
-  }
-  
-  .votingSummary {
-    margin-top: 1em;
-  }
-  
-  .button-link {
-    border: none;
-    text-decoration: underline;
-    text-align: start;
-  }
-  
-  /* lg */
-  @media (min-width: 1024px) {
-    .details {    
-      grid-template-columns: 1fr 1fr 1fr;
-    }
+.search {
+  height: 100%;
+}
 
-    .autoComplete {
-      margin-top: var(--height-nav);
-    }    
+.details {
+  display: grid;
+  padding: 1em;
+  gap: 1em;
+  grid-template-columns: 1fr;
+}
+
+.details__options {
+  display: flex;
+  gap: 1em;
+  padding: .5em;
+}
+
+.mpImage {
+  width: 100%;
+}
+
+.logoImage {
+  width: 50px;
+  height: 50px;
+}
+
+button {
+  display: inline-block;
+  cursor: pointer;
+  color: inherit;
+  padding: .5em;
+  color: var(--clr-dark);
+  background-color: var(--clr-light);
+}
+
+th,
+td {
+  padding: .1em;
+}
+
+th {
+  text-align: start;
+}
+
+.autoComplete {
+  padding: 4px;
+  /* padding-top: 8px; */
+  background-color: var(--clr-light-other);
+  border-radius: 4px;
+  ;
+}
+
+.details__actions {
+  display: flex;
+  flex-direction: column;
+  gap: .5em;
+}
+
+article {
+  padding: 2em;
+}
+
+.table__similarity td, th {
+  padding-left: .5em;
+  padding-right: .5em;
+}
+
+.votingHistoryProgress {
+  width: 100%;
+  padding: 1em;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.votingHistoryWrapper {
+  padding: 1em;
+}
+
+.votingHistoryWrapper__summarise {
+  margin-bottom: .3em;
+  padding-left: 1em;
+  display: flex;
+  align-items: center;
+  gap: .5em;
+}
+
+.votingSummary {
+  margin-top: 1em;
+}
+
+.button-link {
+  border: none;
+  text-decoration: underline;
+  text-align: start;
+}
+
+/* lg */
+@media (min-width: 1024px) {
+  .details {
+    grid-template-columns: 1fr 1fr 1fr;
   }
+
+  .autoComplete {
+    margin-top: var(--height-nav);
+  }
+}
