--- a/src/styles/logo.css
+++ b/src/styles/logo.css
@@ -1,11 +1,12 @@
 .partyLogo {
     position: relative;
-    width: 40px;
-    height: 40px;
+    /* width: 30px;
+    height: 30px; */
     display: flex;
     align-items: center;
     justify-content: center;
-    border-radius: 50%;    
+    border-radius: 50%;
+    padding: .4em;
 }
 
 
@@ -17,7 +18,7 @@
     text-align: center;
     padding: 5px 0;
     border-radius: 6px;
-   
+
     /* Position the tooltip text - see examples below! */
     position: absolute;
     top: -5px;
@@ -27,4 +28,9 @@
 
 .partyLogo:hover .partyLogo__tooltop {
     visibility: visible;
-  }
+}
+
+/* lg */
+@media (min-width: 1024px) {
+
+}
