load static assets and add table cursor hover

--- a/src/styles/votingHistory.css
+++ b/src/styles/votingHistory.css
@@ -11,12 +11,11 @@ li {
 
 .votingHistory__table {
     flex: 2;
-};
+}
 
-/* .votingHistory__table th > div {
-    white-space: nowrap !important;
-    background: red;
-} */
+.votingHistory__table__row {
+    cursor: pointer;
+}
 
 .divisionDetails__title {
     flex: 1;    
