--- a/src/styles/mpDetails.css
+++ b/src/styles/mpDetails.css
@@ -75,6 +75,7 @@
 .mpDetails__image {
   width: 100%;
   border-radius: 4px;
+  border: 4px solid var(--clr-light-other)
 }
 
 .mpDetails__actions {
