--- a/src/styles/search.css
+++ b/src/styles/search.css
@@ -22,7 +22,7 @@ th {
 
 .autoComplete {
   padding: 4px;
-  /* padding-top: 8px; */
+  padding-top: 8px;
   background-color: var(--clr-light-other);
   border-radius: 4px;
   ;
@@ -56,10 +56,6 @@ article {
   display: flex;
   align-items: center;
   gap: .5em;
-}
-
-.votingSummary {
-  margin-top: 1em;
 }
 
 .button-link {
