sort table headers

--- a/src/styles/votingHistory.css
+++ b/src/styles/votingHistory.css
@@ -25,3 +25,10 @@ li {
 .cursor-pointer:hover {
     cursor: pointer;
 }
+
+.votingHistory__table__sort {
+    fill: var(--clr-accent);
+    /* margin-left: 4;  */
+    position: relative; 
+    top: 2px;
+}
