--- a/src/styles/utils.css
+++ b/src/styles/utils.css
@@ -14,3 +14,64 @@
     padding: .5em 1em;
     border-radius: 4px;
 }
+
+.standalone-svg {
+    fill: var(--clr-dark)
+}
+
+.plaintext {
+    text-decoration: none;
+    color: var(--clr-dark);
+}
+
+.toggle {
+  cursor: pointer;
+  display: inline-block;
+}
+
+.toggle__switch {
+  display: inline-block;
+  background: #ccc;
+  border-radius: 16px;
+  width: 58px;
+  height: 32px;
+  position: relative;
+  vertical-align: middle;
+  transition: background 0.25s;
+}
+.toggle__switch:before, .toggle__switch:after {
+  content: "";
+}
+.toggle__switch:before {
+  display: block;
+  background: linear-gradient(to bottom, #fff 0%, #eee 100%);
+  border-radius: 50%;
+  box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.25);
+  width: 24px;
+  height: 24px;
+  position: absolute;
+  top: 4px;
+  left: 4px;
+  transition: left 0.25s;
+}
+.toggle:hover .toggle__switch:before {
+  background: linear-gradient(to bottom, #fff 0%, #fff 100%);
+  box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.5);
+}
+.toggle__checkbox:checked + .toggle__switch {
+  background: var(--clr-accent)
+}
+.toggle__checkbox:checked + .toggle__switch:before {
+  left: 30px;
+}
+
+.toggle__checkbox {
+  position: absolute;
+  visibility: hidden;
+}
+
+.toggle__label {
+  margin-left: 5px;
+  position: relative;
+  top: 2px;
+}
