--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,47 +1,63 @@
-
 :root {
-  font-family: 'Satoshi', sans-serif;
-  
-  --clr-dark: #070a13;
-  --clr-light: #f1f5f9;
+	font-family: "Satoshi", sans-serif;
 
-  --clr-dark-other: #262a32;
-  --clr-light-other: #d5e3f0;
+	--clr-dark: #070a13;
+	--clr-light: #f1f5f9;
 
-  --clr-accent: #980c4c;
+	--clr-dark-other: #262a32;
+	--clr-light-other: #d5e3f0;
 
-  --clr-success: rgb(34 197 94);
-  --clr-info: rgb(59 130 246);
-  --clr-wan: rgb(249 115 22);
-  --clr-error: rgb(239 68 68 );
+	--clr-accent: #980c4c;
 
-  --height-search: 64px;
-  --height-nav: 54px;
+	--clr-success: rgb(34 197 94);
+	--clr-info: rgb(59 130 246);
+	--clr-wan: rgb(249 115 22);
+	--clr-error: rgb(239 68 68);
+
+	--height-search: 64px;
+	--height-nav: 54px;
 }
 
 .light-mode {
-  --clr-light: #070a13;
-  --clr-dark: #f1f5f9;
-  --clr-accent: #a972cb;
-  --clr-light-other: #262a32;
-  --clr-dark-other: #d5e3f0;
-  --clr-slate400: #1e293b;
-  --clr-slate600: #1e293b;
-  --clr-slate800: #1e293b;
+	--clr-light: #070a13;
+	--clr-dark: #f1f5f9;
+	--clr-accent: #a972cb;
+	--clr-light-other: #262a32;
+	--clr-dark-other: #d5e3f0;
+	--clr-slate400: #1e293b;
+	--clr-slate600: #1e293b;
+	--clr-slate800: #1e293b;
+}
+.light-mode > .button {
+	color: #070a13;
 }
 
-body {    
-  background: var(--clr-light);
-  color: var(--clr-dark);  
+body {
+	background: var(--clr-light);
+	color: var(--clr-dark);
 }
 
-* { 
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+* {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
 }
 
-.container {  
-  height: calc(100dvh - var(--height-nav));
-  overflow-y: scroll;  
+.container {
+	height: calc(100dvh - var(--height-nav));
+	overflow-y: scroll;
+}
+
+section,
+p {
+	margin-bottom: 1em;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+	margin-bottom: 0.75em;
 }
