--- a/src/styles/insights.css
+++ b/src/styles/insights.css
@@ -5,15 +5,22 @@
     height: 100%;
 }
 
-.wrapper {    
+.labelwrapper {    
+    display: flex;
 }
 
 .insights__query {
     padding: 1em;
     display: flex;
+    flex-direction: column;
     align-items: baseline;
     gap: 8px;
     padding-bottom: 1em;
+}
+
+.insights__select {
+    margin-left: 8px;
+    margin-right: 8px;
 }
 
 .insights__config {    
@@ -27,4 +34,13 @@
 	.insights {
 		margin-top: var(--height-nav);
 	}
+
+    .insights__query {
+        padding: 1em;
+        display: flex;
+        align-items: baseline;
+        gap: 8px;
+        padding-bottom: 1em;
+    }
+    
 }
