--- a/src/styles/mpDetails.css
+++ b/src/styles/mpDetails.css
@@ -119,7 +119,7 @@
 .mpDetails__toggle-wrapper {
 	display: flex;
 	justify-content: space-between;
-	align-items: center;
+	align-items: baseline;
 }
 
 .mpDetails__label {
