--- a/src/styles/insights.css
+++ b/src/styles/insights.css
@@ -19,6 +19,11 @@
     padding-bottom: 1em;
 }
 
+.insights__query > button {
+    width: 100%;
+    margin-top: 8px;
+}
+
 .fixedLabel {
     width: 80px;
 }
