--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -46,8 +46,8 @@ body {
 	box-sizing: border-box;
 }
 
-.container {
-	height: calc(100dvh - var(--height-nav));
+.container {	
+	padding-bottom: var(--height-nav);
 	overflow-y: scroll;
 }
 
