--- a/src/styles/insights.css
+++ b/src/styles/insights.css
@@ -10,28 +10,20 @@
     align-items: baseline;
 }
 
-/* TODO probably should be a grid */
 .insights__query {
     padding: 1em;
-    display: flex;
-    flex-direction: column;
-    align-items: baseline;
+    display: grid;
     gap: 8px;
-    padding-bottom: 1em;
+    grid-template-columns: 100px 1fr;
 }
 
-/* .insights__query {
-    display: grid;
-    grid-template-columns: repeat(3,1fr);
-} */
+.fixedButton {        
+    grid-column: 1/3;
+}
 
 .insights__query>button {
     width: 100%;
     margin-top: 8px;
-}
-
-.fixedLabel {
-    width: 80px;
 }
 
 .insights__result {
@@ -67,11 +59,8 @@
         margin-top: var(--height-nav);
     }
 
-    .insights__query {
-        padding: 1em;
-        display: flex;
-        align-items: baseline;
-        gap: 8px;
-        padding-bottom: 1em;
+    .fixedButton {        
+        grid-column: 2/2;        
     }
+
 }
