use grid for insights

--- a/src/styles/insights.css
+++ b/src/styles/insights.css
@@ -13,8 +13,9 @@
 .insights__query {
     padding: 1em;
     display: grid;
+    align-items: baseline;
     gap: 8px;
-    grid-template-columns: 100px 1fr;
+    grid-template-columns: 70px 1fr;
 }
 
 .fixedButton {        
