--- a/src/styles/browse.css
+++ b/src/styles/browse.css
@@ -2,6 +2,7 @@
     margin-top: var(--height-nav);
 }
 
+/* toolbar */
 .browse__toolbar {
     width: 100%;
     display: flex;
@@ -10,6 +11,13 @@
     border-bottom: 1px solid var(--clr-dark);
 }
 
+.browse__toolbar__inputwrapper {
+    display: flex;
+    gap: 8px;
+}
+
+/* toolbar end */
+
 .browse__grid {
     padding: 12px;
     display: grid;
@@ -17,6 +25,7 @@
     gap: 12px;
 }
 
+/* cards */
 .browse__card {
     cursor: pointer;
     container-type: inline-size;
@@ -40,6 +49,8 @@
     display: grid;
     grid-template-columns: 30px 1fr;
 }
+
+/* cards end */
 
 @container card (min-width: 200px) {
     .browse__card__img {        
