--- a/src/styles/browse.css
+++ b/src/styles/browse.css
@@ -9,6 +9,8 @@
     justify-content: space-between;
     padding: 10px;
     border-bottom: 1px solid var(--clr-dark);
+    flex-wrap: wrap;
+    gap: 12px;
 }
 
 .browse__toolbar__inputwrapper {
