--- a/src/styles/browse.css
+++ b/src/styles/browse.css
@@ -7,7 +7,8 @@
     width: 100%;
     display: flex;
     justify-content: space-between;
-    padding: 10px;
+    align-items: baseline;
+    padding: 6px;
     border-bottom: 1px solid var(--clr-dark);
     flex-wrap: wrap;
     gap: 12px;
@@ -16,6 +17,7 @@
 .browse__toolbar__inputwrapper {
     display: flex;
     gap: 8px;
+    align-items: baseline;
 }
 
 /* toolbar end */
