--- a/src/styles/browse.css
+++ b/src/styles/browse.css
@@ -17,18 +17,18 @@
 }
 
 .browse__toolbar label {
-    width: 70px;    
+    width: 70px;
 }
 
 .browse__toolbar select {
-    width: 180px;    
+    width: 180px;
 }
 
 .browse__toolbar input {
-    width: 180px;    
+    width: 180px;
 }
 
-.labelWrapper {      
+.labelWrapper {
     display: grid;
     grid-template-columns: 30px 1fr;
     align-items: baseline;
@@ -64,23 +64,25 @@
 }
 
 .browse__card .votecounts {
+    /* width: "100%"; */
+    margin-bottom: 12px;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     border: 1px solid var(--clr-lightgrey);
     border-radius: 4px;
 }
 
-.browse__card .votecounts span {    
+.browse__card .votecounts span {
     padding: 6px;
     border-bottom: 1px solid var(--clr-lightgrey);
     border-right: 1px solid var(--clr-lightgrey);
 }
 
-.browse__card .votecounts span:nth-child(3n) {        
+.browse__card .votecounts span:nth-child(3n) {
     border-right: none;
 }
 
-.browse__card .votecounts span:nth-child(n + 4) {            
+.browse__card .votecounts span:nth-child(n + 4) {
     border-bottom: none;
 }
 
@@ -95,12 +97,46 @@
     grid-template-columns: 30px 1fr;
 }
 
+.skeleton {
+    animation: skeleton-loading 1s linear infinite alternate;
+}
+
+@keyframes skeleton-loading {
+    0% {
+        background-color: hsl(200, 20%, var(--clr-lightness));
+    }
+
+    100% {
+        background-color: hsl(200, 20%, 95%);
+    }
+}
+
+.skeleton-text {
+    width: 100%;
+    height: 0.7rem;
+    margin-bottom: 0.25rem;
+    border-radius: 0.25rem;
+}
+
+.skeleton-text__body {
+    width: 75%;
+}
+
+.skeleton-footer {
+    width: 30%;
+}
+
+.skeleton-grid-item {
+    width: 50%;
+    margin-left: 25%;
+    margin-top: 8px;
+    margin-bottom: 12px;
+}
+
 /* cards end */
 
 @container card (min-width: 200px) {
-    .browse__card__img {
-        border: 2px solid var(--clr-dark);
-    }
+    .browse__card__img {}
 }
 
 @media (min-width: 700px) {
@@ -117,7 +153,7 @@
     }
 
     .browse__toolbar label {
-        width: inherit;    
+        width: inherit;
     }
 
     /* toolbar */
