--- a/src/styles/partiesPage.css
+++ b/src/styles/partiesPage.css
@@ -4,7 +4,7 @@
 
 .partiesPage__header {
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-between;
     padding: 12px;    
 }
 
