--- a/src/styles/partiesPage.css
+++ b/src/styles/partiesPage.css
@@ -5,6 +5,7 @@
 .partiesPage__header {
     display: flex;
     flex-wrap: wrap;
+    gap: 4px;
     justify-content: space-between;
     padding: 12px;    
 }
